--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217153019905" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217162346334" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9603,7 +9603,7 @@ well,
 
 אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
 </div>
-<div created="20170112164936113" modified="20200217152514394" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217163458050" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10830,12 +10830,16 @@ Is where I want to be
 
  </pre>
 </div>
-<div created="20180719103156821" modified="20180719123005457" tags="[[כאן בגטו]]" title="בשביל הפרחים">
+<div created="20180719103156821" modified="20200217163703500" tags="[[כאן בגטו]]" title="בשביל הפרחים">
 <pre>[img[pictures/bishvil-haprachim.jpg]]
 
 !!![[תומר]]:
 
-[[חנות הפרחים|http://bishvil-haprachim.co.il/]] המתוקה והיפה ביותר עם הפרחים והסידורים והכלים היפים ביותר בעיר כולה.</pre>
+חנות הפרחים המתוקה והיפה ביותר עם הפרחים והסידורים והכלים היפים ביותר בעיר כולה.
+
+
+&lt;&lt;englink [Bishvil Haprachim]]&gt;&gt;
+</pre>
 </div>
 <div created="20190308172649378" modified="20200208125322631" tags="[[כאן בגטו]] ילדים [[מטא בדיון]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="בשדרה בדרך הביתה">
 <pre>[img[pictures/basdera.jpg]]
