--- a/english.html
+++ b/english.html
@@ -8494,7 +8494,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Bishvil Haprachim]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8848,13 +8848,13 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200217163534124" modified="20200217163908310" tags="[[Here in the Ghetto]]" title="Bishvil Haprachim">
+<div created="20200217163534124" modified="20200217164535436" tags="[[Here in the Ghetto]]" title="Bishvil Haprachim">
 <pre>
 [img[pictures/bishvil-haprachim.jpg]]
 
 !!![[Tomer]]:
 
-The sweetest and prettiest flower's shop with the most beautiful flowers and bouquets and tools in the whole city.
+The sweetest and prettiest [[flower's shop|https://bishvilflowers.co.il/]] with the most beautiful flowers and bouquets and tools in the whole city.
 
 
 
