--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מערכת תל אביב]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[בשביל הפרחים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9603,7 +9603,7 @@ well,
 
 אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
 </div>
-<div created="20170112164936113" modified="20200217163458050" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217164134750" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10830,16 +10830,15 @@ Is where I want to be
 
  </pre>
 </div>
-<div created="20180719103156821" modified="20200217163703500" tags="[[כאן בגטו]]" title="בשביל הפרחים">
+<div created="20180719103156821" modified="20200217164555895" tags="[[כאן בגטו]]" title="בשביל הפרחים">
 <pre>[img[pictures/bishvil-haprachim.jpg]]
 
 !!![[תומר]]:
 
-חנות הפרחים המתוקה והיפה ביותר עם הפרחים והסידורים והכלים היפים ביותר בעיר כולה.
+[[חנות הפרחים|https://bishvilflowers.co.il/]] המתוקה והיפה ביותר עם הפרחים והסידורים והכלים היפים ביותר בעיר כולה.
 
 
-&lt;&lt;englink [Bishvil Haprachim]]&gt;&gt;
-</pre>
+&lt;&lt;englink [[Bishvil Haprachim]]&gt;&gt;</pre>
 </div>
 <div created="20190308172649378" modified="20200208125322631" tags="[[כאן בגטו]] ילדים [[מטא בדיון]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="בשדרה בדרך הביתה">
 <pre>[img[pictures/basdera.jpg]]
