--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[בשביל הפרחים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217162346334" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217165837098" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9603,7 +9603,7 @@ well,
 
 אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
 </div>
-<div created="20170112164936113" modified="20200217164134750" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217170607467" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -9634,10 +9634,12 @@ well,
 
 </pre>
 </div>
-<div created="20171205140413803" modified="20171205160055845" tags="[[הנחלה בה גדלתי]]" title="אהרון אחי השלם">
+<div created="20171205140413803" modified="20200217170635305" tags="[[הנחלה בה גדלתי]]" title="אהרון אחי השלם">
 <pre>[img[pictures/aharon-achi.jpg]] 
 
-נכון שאחי אהרון הפקיר לא פעם את עמדת השמירה עלי - אחותו הצעירה והיתומה מאם - בנחלה האכזרית, אך הוא גבר מתוק שיצא מהארון בגיל 60, וכמו שאומרים, מוטב מאוחר מלעולם לא. </pre>
+נכון שאחי אהרון הפקיר לא פעם את עמדת השמירה עלי - אחותו הצעירה והיתומה מאם - בנחלה האכזרית, אך הוא גבר מתוק שיצא מהארון בגיל 60, וכמו שאומרים, מוטב מאוחר מלעולם לא. 
+
+&lt;&lt;englink [[My whole brother Aharon]]&gt;&gt;</pre>
 </div>
 <div created="20170319182511016" modified="20200217133442946" tags="HH" title="אודליה">
 <pre>[img[pictures/150crYxBlBOKkAyo.jpg]]
@@ -13135,12 +13137,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מכניסים למקרר, ואפשר להתחיל לאכול יום-יומיים אחר כך.
 </pre>
 </div>
-<div created="20171208204414739" modified="20171208204757690" tags="[[הנחלה בה גדלתי]]" title="חנה אמנו">
+<div created="20171208204414739" modified="20200217165754013" tags="[[הנחלה בה גדלתי]]" title="חנה אמנו">
 <pre>[img[pictures/chana-imenu.jpg]]
 
 !!![[אווה]]:
 
-כאן בתמונה חנה אימי ואני כמה חודשים לפני שנפטרה. היא הייתה [[אשתו הרביעית|עץ המשפחה של אווה]] של אבי, ואת [[אהרון אחי השלם]] היא ילדה 12 שנים לפני שילדה אותי.</pre>
+כאן בתמונה חנה אימי ואני כמה חודשים לפני שנפטרה. היא הייתה [[אשתו הרביעית|עץ המשפחה של אווה]] של אבי, ואת [[אהרון אחי השלם]] היא ילדה 12 שנים לפני שילדה אותי.
+
+
+&lt;&lt;englink [[Hanna our mother]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20170506201817983" modified="20200212143945875" tags="HH מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="חנות דיסקים">
 <pre>[img[pictures/music-house.jpg]]
