--- a/english.html
+++ b/english.html
@@ -489,6 +489,8 @@ Error message and password prompt
 
 <li>Once</li>
 
+<li>Our Father</li>
+
 <li>Outer sisters</li>
 
 <li>Papa Yoel</li>
@@ -556,6 +558,8 @@ Error message and password prompt
 <li>The Chinese</li>
 
 <li>The Couscous</li>
+
+<li>The estate</li>
 
 <li>The Face Directed Outside</li>
 
@@ -8489,7 +8493,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217125807877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217170130596" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217171208356" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8498,7 +8502,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The estate]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8518,7 +8522,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217165507427" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217171332283" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8665,8 +8669,7 @@ a.translation:hover { text-decoration: underline }
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
 <div created="20200217124916746" modified="20200217125410192" tags="[[Here in the Ghetto]] Metafiction Houses" title="2 Da Vinci">
-<pre>
-[img[pictures/da-vinci-2.jpg]]
+<pre>[img[pictures/da-vinci-2.jpg]]
 
 
 !!![[Tomer]]:
@@ -8680,8 +8683,7 @@ It isn't nice to see a shutdown radio station, but when you live here in the ghe
 </pre>
 </div>
 <div created="20200217141431467" modified="20200217142025766" tags="Music [[Here in the Ghetto]] [[A friend]]" title="420">
-<pre>
-[img[pictures/420.jpg]]
+<pre>[img[pictures/420.jpg]]
 
 [[Rastafrequency|https://www.rastafrequency.co.il/420-shop-tel-aviv-2/]]
 
@@ -8853,8 +8855,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 <pre></pre>
 </div>
 <div created="20200217163534124" modified="20200217164535436" tags="[[Here in the Ghetto]]" title="Bishvil Haprachim">
-<pre>
-[img[pictures/bishvil-haprachim.jpg]]
+<pre>[img[pictures/bishvil-haprachim.jpg]]
 
 !!![[Tomer]]:
 
@@ -9329,8 +9330,7 @@ Likewise, she thinks that the widening gender-oriented spectrum, has to do with 
 </pre>
 </div>
 <div created="20200217143910012" modified="20200217144238477" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="Galsi">
-<pre>
-[img[pictures/galsi.jpg]]
+<pre>[img[pictures/galsi.jpg]]
 
 !!![[Tomer]]:
 
@@ -9421,8 +9421,7 @@ She's one of the lucky fellows who were raised together in a group, who came fro
 </pre>
 </div>
 <div created="20200217165254118" modified="20200217170219892" tags="[[The estate]]" title="Hanna our mother">
-<pre>
-[img[pictures/chana-imenu.jpg]]
+<pre>[img[pictures/chana-imenu.jpg]]
 
 [[Eva]]:
 
@@ -9633,8 +9632,7 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 </pre>
 </div>
 <div created="20200217150536703" modified="20200217150654814" tags="[[Outer sisters]] [[Here in the Ghetto]] Music [[Coen sister]] [[A friend]] [[How many songs can you even invent at all]]" title="Jazz">
-<pre>
-[img[pictures/jazz.jpg]]
+<pre>[img[pictures/jazz.jpg]]
 
 
 
@@ -9732,8 +9730,7 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
 </pre>
 </div>
 <div created="20200217144732663" modified="20200217145443157" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="Kiryat Sefer Park">
-<pre>
-[img[pictures/ginat-kiryat-sefer.jpg]]
+<pre>[img[pictures/ginat-kiryat-sefer.jpg]]
 
 !!![[Tomer]]:
 
@@ -9822,7 +9819,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217170511904" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217171226271" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -9918,8 +9915,7 @@ For example, it seethes me when people use words purposelessly, like the word lo
 </pre>
 </div>
 <div created="20200217134428443" modified="20200217134554888" tags="Kitchens [[The kitchen according to Genevieve]] [[Monkeys with car keys]] Laundry" title="Misenplation">
-<pre>
-[img[pictures/mizonplazya.jpg]]
+<pre>[img[pictures/mizonplazya.jpg]]
 
 
  &lt;&lt;heblink [[מיזונפלציה]]&gt;&gt;
@@ -9928,8 +9924,7 @@ For example, it seethes me when people use words purposelessly, like the word lo
 </pre>
 </div>
 <div created="20200217140255366" modified="20200217141338003" tags="[[Here in the Ghetto]] Restaurants [[Food addicts]] Kitchens" title="Miznon">
-<pre>
-[img[pictures/miznon.jpg]]
+<pre>[img[pictures/miznon.jpg]]
 
 
 !!![[Tomer]]:
@@ -9956,7 +9951,7 @@ The [[Miznon|https://miznon.com/]] that's in the picture is on 30 King George, n
 
 </pre>
 </div>
-<div created="20200212210738091" modified="20200212220216313" tags="[[Monkeys with car keys]] [[The team]]" title="Mothers">
+<div created="20200212210738091" modified="20200217171753871" tags="[[Monkeys with car keys]] [[The team]]" title="Mothers">
 <pre>[img[pictures/imahot.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Mothers]]&quot;&gt;&gt;
@@ -9993,8 +9988,7 @@ It's difficult for me at this point of life to think about relations.
  &lt;&lt;heblink [[אימא שלי]]&gt;&gt;</pre>
 </div>
 <div created="20200217170240887" modified="20200217170540379" tags="[[The estate]]" title="My whole brother Aharon">
-<pre>
-[img[pictures/aharon-achi.jpg]] 
+<pre>[img[pictures/aharon-achi.jpg]] 
 
 !!![[Eva]]:
 
@@ -10051,8 +10045,7 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
  &lt;&lt;heblink [[חשיפה לצפון]]&gt;&gt;</pre>
 </div>
 <div created="20200217133031335" modified="20200217133537659" tags="HH" title="Odelia">
-<pre>
-[img[pictures/150crYxBlBOKkAyo.jpg]]
+<pre>[img[pictures/150crYxBlBOKkAyo.jpg]]
 
 !!![[Gura]]:
 
@@ -10074,8 +10067,7 @@ Odelia is a K sister who trades art. She dresses super stylish, knows tantra, su
 </pre>
 </div>
 <div created="20200217152050036" modified="20200217161226311" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction" title="On the way to Sarona">
-<pre>
-[img[pictures/baderech-lesarona.jpg]]
+<pre>[img[pictures/baderech-lesarona.jpg]]
 
 !!![[Tomer]]:
 
@@ -10103,6 +10095,18 @@ It seemed like, everything is fine''
 
 
 </pre>
+</div>
+<div created="20200217171010937" modified="20200217171403899" tags="[[The estate]]" title="Our Father">
+<pre>
+[img[pictures/avinu.jpg]]
+
+
+!!![[Eva]]:
+
+I've met my only father, after many years we haven't met. This picture was taken in the estate about twenty years ago.
+
+
+ &lt;&lt;heblink [[אבינו]]&gt;&gt;</pre>
 </div>
 <div created="20200212163427451" modified="20200212164322920" tags="[[Monkeys with car keys]] [[How many songs can you even invent at all]]" title="Outer sisters">
 <pre>[img[pictures/ahayot-huz.jpg]]
@@ -10334,15 +10338,13 @@ Rosh Hashana 2017 was really something. Meaning, in the end of the day it was gr
 </pre>
 </div>
 <div created="20200217134743341" modified="20200217134843465" tags="[[The estate]] Houses" title="Scents">
-<pre>
-[img[pictures/reychot.jpg]]
+<pre>[img[pictures/reychot.jpg]]
 
 
  &lt;&lt;heblink [[ריחות]]&gt;&gt;</pre>
 </div>
 <div created="20200217142305955" modified="20200217143014956" tags="[[Here in the Ghetto]] [[Food addicts]]" title="Shoretzky">
-<pre>
-[img[pictures/shorezky.jpg]]
+<pre>[img[pictures/shorezky.jpg]]
 
 !!![[Tomer]]:
 
@@ -10429,8 +10431,7 @@ And I say:
 </pre>
 </div>
 <div created="20200217151145172" modified="20200217161018161" tags="[[Here in the Ghetto]] Metafiction" title="Tel Aviv Editorial">
-<pre>
-[img[pictures/maarechet-tel-aviv.jpg]]
+<pre>[img[pictures/maarechet-tel-aviv.jpg]]
 
 
 !!![[Tomer]]:
@@ -10506,6 +10507,20 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
  &lt;&lt;heblink [[הקוסקוס]]&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20200217171627257" modified="20200217171826475" tags="Houses" title="The estate">
+<pre>
+[img[pictures/sof-hanachala.jpg]]
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[The estate]]&quot;&gt;&gt;
+
+
+
+ &lt;&lt;heblink [[הנחלה בה גדלתי]]&gt;&gt;
 
 </pre>
 </div>
@@ -10907,8 +10922,7 @@ I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he
 </pre>
 </div>
 <div created="20200217131804519" modified="20200217132253478" tags="Music [[Outer sisters]] [[How many songs can you even invent at all]]" title="Yehonatan Geffen">
-<pre>
-[img[pictures/yonatan-gefen.jpg]]
+<pre>[img[pictures/yonatan-gefen.jpg]]
 
 
  &lt;&lt;heblink [[יהונתן גפן]]&gt;&gt;
