--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217165837098" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217171022354" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9567,10 +9567,14 @@ well,
 
 &lt;&lt;englink [[Papa Yoel]]&gt;&gt;</pre>
 </div>
-<div created="20171205174328432" modified="20171207165459321" tags="[[הנחלה בה גדלתי]]" title="אבינו">
+<div created="20171205174328432" modified="20200217171554305" tags="[[הנחלה בה גדלתי]]" title="אבינו">
 <pre>[img[pictures/avinu.jpg]]
 
-את אבי האחד פגשתי שוב, אחרי שנים רבות שלא נפגשנו. התמונה הזו צולמה [[בנחלה|הנחלה בה גדלתי]] לפני עשרים שנה בערך.</pre>
+את אבי האחד פגשתי שוב, אחרי שנים רבות שלא נפגשנו. התמונה הזו צולמה [[בנחלה|הנחלה בה גדלתי]] לפני עשרים שנה בערך.
+
+
+&lt;&lt;englink [[Our Father]]&gt;&gt;
+</pre>
 </div>
 <div created="20171003162348923" modified="20200217132931725" tags="[[חיות אוכל]] [[חלומות שחלמנו]] אפייה" title="אבקות">
 <pre>[img[pictures/avkot.jpg]]
@@ -9603,7 +9607,7 @@ well,
 
 אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
 </div>
-<div created="20170112164936113" modified="20200217170607467" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217171907904" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12608,7 +12612,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170201205235325" modified="20190314143904480" tags="בתים" title="הנחלה בה גדלתי">
+<div created="20170201205235325" modified="20200217171946553" tags="בתים" title="הנחלה בה גדלתי">
 <pre>[img[pictures/sof-hanachala.jpg]]
 
 !!![[אווה]]:
@@ -12617,6 +12621,16 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 &lt;&lt;list-links filter:&quot;[tag[הנחלה בה גדלתי]]&quot;&gt;&gt;
+
+
+&lt;&lt;englink [[The estate]]&gt;&gt;
+
+
+
+
+
+
+
 </pre>
 </div>
 <div created="20170704162831150" modified="20171029224317265" title="הסדנה של קואנג">
