--- a/english.html
+++ b/english.html
@@ -347,6 +347,8 @@ Error message and password prompt
 
 <li>Eva Coen</li>
 
+<li>Eva`s family tree</li>
+
 <li>Exile</li>
 
 <li>Fa</li>
@@ -512,6 +514,8 @@ Error message and password prompt
 <li>Public Transportation</li>
 
 <li>Radio epgb</li>
+
+<li>Raziel and Rafael</li>
 
 <li>Rear Window</li>
 
@@ -8493,7 +8497,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217125807877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217171208356" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217174910757" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8502,7 +8506,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The estate]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9280,6 +9284,15 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
  &lt;&lt;heblink [[אווה כהן]]&gt;&gt;</pre>
 </div>
+<div created="20200217174816634" modified="20200217174955087" tags="[[The estate]] Children" title="Eva`s family tree">
+<pre>
+[img[pictures/eva-garinit.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[עץ המשפחה של אווה]]&gt;&gt;</pre>
+</div>
 <div created="20200215222945436" modified="20200217121629298" tags="[[Iry claims]] [[Monkeys with car keys]] Houses [[On the road to somewhere]] [[The global village]]" title="Exile">
 <pre>[img[pictures/galoot.jpg]]
 
@@ -9420,12 +9433,12 @@ She's one of the lucky fellows who were raised together in a group, who came fro
 
 </pre>
 </div>
-<div created="20200217165254118" modified="20200217170219892" tags="[[The estate]]" title="Hanna our mother">
+<div created="20200217165254118" modified="20200217175255085" tags="[[The estate]]" title="Hanna our mother">
 <pre>[img[pictures/chana-imenu.jpg]]
 
 [[Eva]]:
 
-Here in the picture are Hanna my mother and I, few months before she passed away. She was my father's fourth wife, and she gave birth to [[my whole brother Aharon|My whole brother Aharon]], 12 years before she gave birth to me.
+Here in the picture are Hanna my mother and I, few months before she passed away. She was my father's [[fourth wife|Eva`s family tree]], and she gave birth to [[my whole brother Aharon|My whole brother Aharon]], 12 years before she gave birth to me.
 
 
 
@@ -9819,7 +9832,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217171226271" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217174925199" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10251,6 +10264,29 @@ For example, I'm proud to say that I don't own a private car, but instead I do p
 
 
 &lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
+</div>
+<div created="20200217174006071" modified="20200217174552629" tags="[[The estate]] Houses" title="Raziel and Rafael">
+<pre>
+[img[pictures/refaelveraziel.jpg]]
+
+!!![[Eva]]:
+
+Raziel and Rafael are [[two of my 23 half brothers and sisters|Eva`s family tree]], they stood by me my entire life in the farm and helped me when they could. They are two of the three sons of Perla, my father's first wife, who passed away when she was 35 of the harsh disease. Rafael was eight then, Raziel was 13 and Ishay was 15.
+
+Perla and my father lived in my grandmother's and grandfather's house, and even after Perla's death my father and the three boys kept lining there and managing their house.  
+
+I didn't know Perla, but according to the stories and her sons, she was a wonderful woman. She was a sick woman and her boys always took care of her. They had a brotherhood fraternity. They were good people.
+
+Ishay got married when he was 25 and left the Nahala. Raziel and Rafael didn't get married, and except for the years they've studied at college, Raziel science and Rafael art, they’ve lived their entire life with father at the same big house and were the ones who continued our grandfather's carpentry heritage.
+
+In the back part of the blue innocent looking warehouse on the left side of the painting, whose front's part was organized with big part of Rafael's art collection, Raziel grew marijuana. It was a kept secret, who I was told about by Aaron only in the last few years. Both of them still live there.
+
+
+
+
+
+
+ &lt;&lt;heblink [[רזיאל ורפאל]]&gt;&gt;</pre>
 </div>
 <div created="20200215213829151" modified="20200215214355784" tags="[[Here in the Ghetto]] Films [[True stories]]" title="Rear Window">
 <pre>[img[pictures/rear-window.jpg]]
