--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217171022354" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217175608773" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9600,14 +9600,18 @@ well,
 
 שבועיים לפני, אשתי הנחמדת קנתה לה ולי כרטיסים להופעה של [[קותימן|https://kutiman.bandcamp.com/]] שהתקיימה בסוף יולי [[באברהם הוסטל|https://abrahamhostels.com/?gclid=EAIaIQobChMI_djYvui13QIVmKiaCh0GAAOpEAAYASAAEgISR_D_BwE]], שזה מקום שאני תמיד אוהב ללכת אליו. בשעת האמת היא הייתה עייפה מידי, ומיד הזמנתי את שכנתי האהובה, (חוטא רגע בניים דרופינג), [[יסמין|Jazz]], שהופיעה שם לפני כמה חודשים עם [[שלוש|https://www.youtube.com/watch?v=ZamQEe7_hdQ]], לבוא איתי, והיא הייתה פנויה!! לקחנו מונית כי חם, והיה כיף חיים.</pre>
 </div>
-<div created="20171207164711924" modified="20171208180406611" tags="[[הנחלה בה גדלתי]]" title="אדית">
+<div created="20171207164711924" modified="20200217175845701" tags="[[הנחלה בה גדלתי]]" title="אדית">
 <pre>[img[pictures/edith-cohen.jpg]]
 
 !!![[אווה]]:
 
-אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
+אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.
+
+&lt;&lt;englink [[Edith]]&gt;&gt;
+
+</pre>
 </div>
-<div created="20170112164936113" modified="20200217171907904" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217175824459" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -16732,7 +16736,7 @@ May the lord bless your soul, I love you girl
 
 לשים לה את היד (עם כפפה) על הפנים, ולסובב.</pre>
 </div>
-<div created="20161218191604654" modified="20190219162507601" tags="[[הנחלה בה גדלתי]] ילדים" title="עץ המשפחה של אווה">
+<div created="20161218191604654" modified="20200217175125618" tags="[[הנחלה בה גדלתי]] ילדים" title="עץ המשפחה של אווה">
 <pre>[img[pictures/eva-garinit.jpg]]
 
 
@@ -16781,7 +16785,7 @@ May the lord bless your soul, I love you girl
 .
 
 
-</pre>
+&lt;&lt;englink [[Eva`s family tree]]&gt;&gt;</pre>
 </div>
 <div created="20170603193440578" modified="20170604134857056" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פ.מ.אלכסנדר">
 <pre>[img[pictures/f-m-alexander.jpg]]
@@ -18081,7 +18085,7 @@ Fapina''
 
 7. מוציאים מהתנור, נותנים לבשר לעמוד עוד 15 דקות ואפשר לחתוך ולאכול.</pre>
 </div>
-<div created="20170202133543180" modified="20180704182429230" tags="[[הנחלה בה גדלתי]] בתים" title="רזיאל ורפאל">
+<div created="20170202133543180" modified="20200217174740251" tags="[[הנחלה בה גדלתי]] בתים" title="רזיאל ורפאל">
 <pre>[img[pictures/refaelveraziel.jpg]]
 
 !!![[אווה]]:
@@ -18096,6 +18100,10 @@ Fapina''
 
 בחלק האחורי של המחסן הכחול והתמים למראה שבצד שמאל של הציור, שבחלקו הקדמי היה מסודר חלק גדול מאוסף האומנות של רפאל, גידל רזיאל מריחואנה. זה היה סוד שמור, שרק בשנים האחרונות סיפר לי עליו אהרון.
 הם שניהם עדיין מתגוררים שם.
+
+
+
+&lt;&lt;englink [[Raziel and Rafael]]&gt;&gt;
 
 
 
