--- a/english.html
+++ b/english.html
@@ -339,6 +339,8 @@ Error message and password prompt
 
 <li>Dreams that we've dreamt</li>
 
+<li>Edith</li>
+
 <li>Elementary</li>
 
 <li>Ethan and Joel Coen</li>
@@ -8506,7 +8508,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Edith [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9242,6 +9244,17 @@ This is [[David Byrne|http://davidbyrne.com/]].
 
  &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
 </div>
+<div created="20200217175503049" modified="20200217175750962" tags="[[The estate]]" title="Edith">
+<pre>
+[img[pictures/edith-cohen.jpg]]
+
+!!![[Eva]]:
+
+Edith is my [[half-sister|Eva`s family tree]]. She ran away from the Nahala a year before me, and we met only seven years ago (it's 2017 now). Meeting her again was one of the most wonderful things that had ever happened to me.
+
+
+ &lt;&lt;heblink [[אדית]]&gt;&gt;</pre>
+</div>
 <div created="20190226092627784" modified="20200212165740061" tags="[[TV Series]] TV" title="Elementary">
 <pre>[img[pictures/elementary.jpg]]
 
@@ -9832,7 +9845,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217174925199" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217175733839" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
