--- a/english.html
+++ b/english.html
@@ -405,6 +405,8 @@ Error message and password prompt
 
 <li>In the Animal Farm</li>
 
+<li>Iris</li>
+
 <li>Iris the daughter</li>
 
 <li>Iry</li>
@@ -566,6 +568,8 @@ Error message and password prompt
 <li>The Couscous</li>
 
 <li>The estate</li>
+
+<li>The estate`s kitchen</li>
 
 <li>The Face Directed Outside</li>
 
@@ -8499,7 +8503,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217125807877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217174910757" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217181101133" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8508,7 +8512,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Edith [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The estate`s kitchen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8528,7 +8532,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217171332283" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217180652212" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9612,6 +9616,22 @@ Yes you- killing machines, exterminating and cancelling all that's not in your f
 
 </pre>
 </div>
+<div created="20200217180444278" modified="20200217181125602" tags="[[The estate]]" title="Iris">
+<pre>
+[img[pictures/iris.jpg]]
+
+
+!!![[Eva]]:
+
+In that corner of the [[Estate`s kitchen|The estate`s kitchen]], Iris had sat at the end of every working day, smoking three or four cigarettes one by one and staring.
+
+Iris is the same wonderful woman who taught me how to work in the kitchen, who taught me to bake, who was like a mother to me, who helped me to run away from the Nahala and whose name I gave to my [[daughter|Iris the daughter]].
+
+
+
+ &lt;&lt;heblink [[איריס]]&gt;&gt;
+</pre>
+</div>
 <div created="20200212171932372" modified="20200212172435735" tags="[[Coen sister]] Children [[Single parent children]]" title="Iris the daughter">
 <pre>[img[pictures/iris-habat.jpg]]
 
@@ -9845,7 +9865,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217175733839" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217181750940" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10570,6 +10590,27 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 
  &lt;&lt;heblink [[הנחלה בה גדלתי]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200217181158582" modified="20200217181918001" tags="[[The estate]] Kitchens Meals Baking" title="The estate`s kitchen">
+<pre>
+[img[pictures/hamitbach-shel-hanachala.jpg]]
+
+!!![[Eva]]:
+
+The kitchen was enormous
+. 
+It had a main space full of tables, sinks and refrigerators, and a spaced sitting area where we smoked and ate and it's what I've tried to draw here.
+
+What you can't see in the drawing is the whole left side of that space who included two food mixers and one large food processor, large cooktops with eight flames, wide plancha and two large stoves.
+
+On the right side there is a cooling room, a freezer and three little storerooms organized with the raw materials.
+
+
+ &lt;&lt;heblink [[המטבח של הנחלה]]&gt;&gt;
+
+
 
 </pre>
 </div>
