--- a/index.html
+++ b/index.html
@@ -9175,7 +9175,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217150815393" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217151112915" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217180854191" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[המטבח של הנחלה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217175608773" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217180431289" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9611,7 +9611,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200217175824459" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217181308156" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10313,14 +10313,17 @@ well,
 
 &lt;&lt;englink [[Iry claims]]&gt;&gt;</pre>
 </div>
-<div created="20170201204950366" modified="20170811170233223" tags="[[הנחלה בה גדלתי]]" title="איריס">
+<div created="20170201204950366" modified="20200217180901506" tags="[[הנחלה בה גדלתי]]" title="איריס">
 <pre>[img[pictures/iris.jpg]]
 
 !!![[אווה]]:
 
-בפינה הזו של המטבח של הנחלה, איריס הייתה יושבת בסוף כל יום עבודה, ומעשנת שלוש-ארבע סיגריות בזו אחר זו ובוהה.
+בפינה הזו של [[המטבח של הנחלה]], איריס הייתה יושבת בסוף כל יום עבודה, ומעשנת שלוש-ארבע סיגריות בזו אחר זו ובוהה.
 
 איריס היא אותה אישה נפלאה, שלימדה אותי לעבוד במטבח, שלימדה אותי לאפות, שהייתה לי כאם, שעזרה לי לנוס מן הנחלה ושאת שמה נתתי [[לבתי|איריס הבת]].
+
+
+&lt;&lt;englink [[Iris]]&gt;&gt;
 
 </pre>
 </div>
@@ -12505,7 +12508,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170206170428832" modified="20190718053904847" tags="[[הנחלה בה גדלתי]] ארוחות מסעדות אפייה מטבחים" title="המטבח של הנחלה">
+<div created="20170206170428832" modified="20200217181340386" tags="[[הנחלה בה גדלתי]] ארוחות אפייה מטבחים" title="המטבח של הנחלה">
 <pre>[img[pictures/hamitbach-shel-hanachala.jpg]]
 
 !!![[אווה]]:
@@ -12519,6 +12522,8 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 בצד הימני יש חדר קירור, מקפיא ושלושה מחסנים קטנים בהם מסודרים חומרי הגלם.
 
 
+
+&lt;&lt;englink [[The estate`s kitchen]]&gt;&gt;
 
 
 
